# Kinova-Takktile-Finger

./: README.md
kinova_takktile_gripper_driver/: CMakeLists.txt  package.xml
kinova_takktile_gripper_driver/include/: kinova_takktile_gripper.h  kinova_takktile_gripper_api.h
kinova_takktile_gripper_driver/launch/: bringup.launch
kinova_takktile_gripper_driver/src/: kinova_takktile_gripper.cpp  kinova_takktile_gripper_node.cpp
kinova_takktile_gripper_msgs/: CMakeLists.txt  package.xml
kinova_takktile_gripper_msgs/msg/: Finger.msg  finger_tip.msg  kg2_gripper.msg  kg3_gripper.msg  palm.msg
